style(navbar): adjust logo placement and add blur effect style(home): make "Sailing Soon" and anchor more prominent, swap background images with blur and shadows style(footer): update copyright year from 2024 to 2025, improve spacing and text alignment style(contact): remove map location style(scrolltotop): add black shadow/blurred outline to scroll-up button style(home, contact): make scroll-up button transparent style(home): explore text wave animations style(scrolltotop): animate arrow in scroll-up button style(typewriter): animate "Sailing Soon" heading in typewriter style fix(favicon): update favicon directory in index.html chore(vite): add Wi-Fi hosting configuration in package.json

--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -13,7 +13,7 @@
 }
 
 .footer-content {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 8rem 1rem 0;
   display: grid;
@@ -81,12 +81,12 @@
   color: #40c4ff;
   animation: floaty 2s ease-in-out infinite;
 }
-.phone-icon {
+/* .phone-icon {
   padding-bottom: 0.6rem;
   width: 15px;
   color: #40c4ff;
   animation: floaty 2s ease-in-out infinite;
-}
+} */
 .footer-section h4 {
   align-items: center;
   display: flex;
@@ -99,7 +99,7 @@
 .footer-section p {
   color: rgba(255, 255, 255, 0.8);
   margin-bottom: 0.5rem;
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 .footer-section ul {
@@ -212,7 +212,7 @@
   }
 
   .footer-logo-image {
-    width: 100px;
+    width: 200px;
   }
 
   .footer .waves-container {
@@ -227,7 +227,7 @@
   }
 
   .footer-logo-image {
-    width: 90px;
+    width: 180px;
   }
 
   .footer .waves-container {
